# nano-nccl

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  README.zh.md  performance.md
benchmarks/: CMakeLists.txt  all_reduce_bench.cu
include/nano_nccl/: all_reduce.h  communicator.h  mpi.h  traits.h  types.h
src/: CMakeLists.txt
src/collective/: collective.h
src/collective/all_reduce/: bench_profiling.h  communicator.cu  communicator_internal.h  mpi_communicator.cc  ring_simple.cu  ring_simple.h  topology.cc  topology.h
src/core/: buffer.cu  buffer.h  numa.cu  numa.h  stream.h
src/kernels/: ring_simple_kernel.cuh
src/transport/: simple_protocol.h  transport.h
src/transport/p2p/: p2p_fifo.cu  p2p_fifo.h  p2p_step_counters.cu  p2p_step_counters.h  p2p_topology.cu  p2p_topology.h
src/transport/shm/: shm_fifo.cu  shm_fifo.h  shm_step.h
src/transport/socket/: socket_endpoint.cc  socket_endpoint.h  socket_protocol.h  socket_proxy.cc  socket_proxy.h
tests/: CMakeLists.txt  avg_scale_fusion_static.py  bench_profiling_static.py  communicator_bf16_validation_static.py  communicator_cleanup_static.py  correctness.cu  mpi_bootstrap.cu  mpi_correctness.cu  p2p_step_counters.cu  p2p_topology.cu  public_api.cu  simple_protocol.cu  smoke.cu  socket_protocol_test.cc
